--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -32,12 +32,20 @@ body {
   padding: 20px;
 }
 
+/* Player */
+
+.player {
+  width: 200px;
+}
+
 .player-controls {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between;
   width: 120px;
-  margin-bottom: 28px;
+  margin-bottom: 28px; */
+  justify-content: space-around;
+  margin-bottom: 10px;
 }
 
 .play-list {
@@ -119,6 +127,105 @@ body {
   background-image: url("../assets/svg/play-next.svg");
 }
 
+/* Advanced player */
+
+.time-line {
+  display: flex;
+  height: 6px;
+  /* width: 180px; */
+  border-radius: 3px;
+  background-color: rgba(255, 255, 255, 0.5);
+  z-index: 2;
+  margin-bottom: 2px;
+  cursor: pointer;
+}
+
+.all-time-line {
+  display: flex;
+  height: 6px;
+  align-self: center;
+  border-radius: 3px;
+  background-color: rgb(255, 255, 255);
+  z-index: 1;
+}
+
+.mute-icon {
+  background-image: url("../assets/svg/mute.svg") !important;
+}
+
+.vol-controls {
+  left: 164px;
+  width: 32px;
+  display: flex;
+  justify-self: flex-start;
+  align-items: stretch;
+  /* position: fixed; */
+  z-index: 10;
+  transition: width 0.5s;
+}
+
+.vol-mute {
+  background-image: url("../assets/svg/volume.svg");
+  background-repeat: no-repeat;
+  justify-self: flex-start;
+  min-width: 32px;
+  height: 32px;
+  z-index: 2;
+}
+
+.vol-controls:hover {
+  /* width: 132px !important; */
+  width: 200px !important;
+}
+
+.vol-line-block {
+  margin-left: 8px;
+  justify-self: flex-start;
+  align-self: center;
+  /* width: 200px;
+  height: 8px; */
+  width: 160px;
+  height: 6px;
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 6px;
+  z-index: 3;
+  cursor: pointer;
+}
+
+.vol-line {
+  z-index: 2;
+  height: 100%;
+  width: 0%;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 6px;
+}
+
+.play-title {
+  margin-bottom: 4px;
+  text-align: start;
+  font-size: 0.8rem;
+  opacity: .7;
+}
+
+.play-time {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 8px;
+}
+
+.play-cur-time {
+  font-size: 0.8rem;
+  opacity: .6;
+}
+
+.play-dur-time {
+  font-size: 0.8rem;
+  opacity: .6;
+}
+
+/* Weather */
+
 .weather {
   display: flex;
   flex-direction: column;
@@ -164,6 +271,8 @@ body {
   color: #fff;
   opacity: .6;
 }
+
+/* Background slider*/
 
 .main {
   position: relative;
