--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -122,13 +122,6 @@ body {
   background-image: url("../assets/svg/play.svg");
 }
 
-/* .play-mini {
-  width: 16px;
-  height: 16px;
-  background-size: 16px 16px;
-  background-image: url("../assets/svg/play.svg");
-} */
-
 .play-item-btn {
   width: 16px;
   height: 16px;
@@ -175,6 +168,7 @@ body {
 
 .mute-icon {
   background-image: url("../assets/svg/mute.svg") !important;
+  /* z-index: 100; */
 }
 
 .vol-controls {
@@ -187,6 +181,8 @@ body {
   /* position: fixed; */
   z-index: 10;
   transition: width 0.5s;
+  padding-bottom: 10px;
+  gap: 8px;
 }
 
 .vol-mute {
@@ -195,13 +191,22 @@ body {
   justify-self: flex-start;
   min-width: 32px;
   height: 32px;
-  z-index: 112;
+  /* z-index: 112; */
 }
 
 /* .vol-controls:hover {
   width: 132px !important;
   width: 200px !important;
 } */
+
+.volume {
+  width: 160px;
+  align-self: center;
+  height: 6px;
+  /* background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 6px;
+  cursor: pointer; */
+}
 
 .vol-line-block {
   margin-left: 8px;
@@ -226,10 +231,54 @@ body {
   border-radius: 6px;
 }
 
+/*-------------------------------------------------------------------------------------*/
+
+.progress {
+  -webkit-appearance: none;
+  appearance: none;
+  height: 6px;
+  /* background: #000000; */
+  background: rgba(255, 255, 255, 0.5);
+  width: 100%;
+  border-radius: 3px;
+}
+
+.progress::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  margin-top: -6px;
+  margin-left: 0px;
+  height: 16px;
+  width: 10px;
+  border: 0;
+  /* background: -webkit-linear-gradient(45deg,  rgb(255, 255, 255), rgb(181, 182, 178)); */
+  background: rgba(255, 255, 255);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.progress::-webkit-slider-runnable-track {
+  -webkit-appearance: none;
+  appearance: none;
+  cursor: pointer;
+  max-height: 5px;
+  border-radius: 30px;
+}
+
+.progress:focus {
+  outline: none;
+}
+
+#progress__audio {
+  width: 100%;
+}
+
+
+/*=====================================================================================*/
+
 .play-title {
   margin-bottom: 4px;
-  text-align: start;
-  font-size: 0.8rem;
+  text-align: center;
+  /* font-size: 0.8rem; */
   opacity: .7;
 }
 
