--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -52,6 +52,28 @@ body {
 
 .player {
   width: 200px;
+  position: relative;
+}
+
+.player::before,
+.weather::before {
+  display: block;
+	content: "";
+	position: absolute;
+	left: -20px;
+	top: -20px;
+	width: calc(100% + 40px);
+	height: calc(100% + 40px);
+	background-color: #FFFFFF10;
+	/* z-index: -1; */
+}
+
+.player::before {
+	border-bottom-right-radius: 16px;
+}
+
+.weather::before {
+  border-bottom-left-radius: 16px;
 }
 
 .player-controls {
@@ -63,7 +85,7 @@ body {
 
 .play-list {
   text-align: left;
-  padding-bottom: 5px;
+
 }
 
 .play-item {
@@ -269,8 +291,11 @@ body {
   align-items: flex-start;
   row-gap: 5px;
   width: 180px;
-  min-height: 180px;  
+  min-height: 180px;
+  height: 268px; /* need resize observer*/
   text-align: left;
+  position: relative;
+  opacity: .8;
 }
 
 .weather-error {
@@ -286,7 +311,7 @@ body {
 }
 
 .weather-icon {
-  font-size: 44px;
+  font-size: 80px;
 }
 
 .city {
