--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -65,16 +65,16 @@ body {
 	top: -20px;
 	width: calc(100% + 40px);
 	height: calc(100% + 40px);
-	background-color: #FFFFFF10;
+	background-color: #FFFFFF20;
 	z-index: -1;
 }
 
 .player::before {
-	border-bottom-right-radius: 16px;
+	border-bottom-right-radius: 20px;
 }
 
 .weather::before {
-  border-bottom-left-radius: 16px;
+  border-bottom-left-radius: 20px;
 }
 
 .player-controls {
@@ -491,6 +491,136 @@ body {
   background-image: url("../assets/svg/russia-flag-icon.svg");
 }
 
+/* Settings */
+
+.settings-container {
+	position: fixed;
+	left: 40px;
+	bottom: 80px;
+	z-index: 3;
+}
+
+.settings-content {
+	padding: 20px;
+	/* position: absolute; */
+	/* left: -240px; */
+	/* bottom: 80px; */
+	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	gap: 15px;
+	background-color: #FFFFFF20;
+	border-radius: 20px;
+	/* color: rgb(255 255 255); */
+	transition: all 0.4s ease;
+}
+
+.settings-block {
+	white-space: nowrap;
+	display: flex;
+  /* position: relative; */
+	justify-content: space-between;
+	align-items: flex-start;
+	gap: 20px;
+  font-size: 18px;
+}
+
+.settings-block b {
+	user-select: none;
+	font-weight: normal;
+	line-height: 20px;
+}
+
+/* label */
+
+input[type="checkbox"] {
+	height: 0;
+	width: 0;
+	visibility: hidden;
+	position: absolute;
+}
+
+label {
+	cursor: pointer;
+	text-indent: -9999px;
+	width: 30px;
+	height: 20px;
+	background: grey;
+	display: block;
+	border-radius: 100px;
+	position: relative;
+}
+
+label::after {
+	content: "";
+	position: absolute;
+	top: 5px;
+	left: 5px;
+	width: 10px;
+	height: 10px;
+	background: #0039A6;
+	border-radius: 10px;
+	transition: 0.3s;
+	z-index: 1;
+}
+
+input:checked + label {
+	background: #FFFFFF;
+}
+
+input + .toggle-lang {
+	border-radius: 7px;
+	background: url("../assets/svg/russia-flag-icon.svg");
+}
+
+input:checked + .toggle-lang {
+	background: url("../assets/svg/united-kingdom-flag-icon.svg");
+	background-position-y: 1.2px;
+}
+
+input + .toggle-lang {
+	box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.8);
+	background-blend-mode: multiply;
+}
+
+input:checked + label:after {
+	left: calc(100% - 5px);
+	transform: translateX(-100%);
+}
+
+label:active:after {
+	width: 18px;
+}
+
+input + .toggle-lang::after {
+	content: "";
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	left: 0 !important;
+	top: 0;
+	background-color: #000;
+	border-radius: 20px;
+	z-index: 0;
+	opacity: 0.2;
+	transform: none !important;
+}
+
+.setting-bg-container select {
+	padding: 0 5px;
+	height: 20px;
+	border: 0;
+	border-radius: 20px;
+	box-sizing: border-box;
+	outline: none;
+}
+
+.with-tag {
+	margin-bottom: 34px;
+}
+.with-tag input {
+	display: block;
+}
 
 @media (max-width: 768px) {
   .time {
