--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -54,11 +54,12 @@ body {
 .player {
   width: 200px;
   position: relative;
+  transition: .3s;
 }
 
 .player::before,
 .weather::before {
-  	display: block;
+  display: block;
 	content: "";
 	position: absolute;
 	left: -20px;
@@ -297,6 +298,7 @@ body {
   /* text-align: left; */
   position: relative;
   opacity: .8;
+  transition: .3s;
 }
 
 .weather-error {
@@ -370,13 +372,15 @@ body {
   margin-bottom: 10px;
   font-family: 'Arial-MT';
   font-size: 100px;
-  letter-spacing: -4px;  
+  letter-spacing: -4px;
+  transition: .3s;
 }
 
 .date {
   min-height: 28px;
   font-size: 24px;
   margin-bottom: 20px;
+  transition: .3s;
 }
 
 .greeting-container {
@@ -387,6 +391,7 @@ body {
   min-height: 48px;
   width: 100vw;
   font-size: 40px;
+  transition: .3s;
 }
 
 .greeting {
@@ -426,6 +431,9 @@ body {
   gap: 30px;
 }
 
+.quote-wrapper {
+  transition: .3s;
+}
 .change-quote {
   margin-bottom: 30px;
   background-image: url("../assets/svg/reload.svg");  
@@ -493,11 +501,16 @@ body {
 
 /* Settings */
 
-.settings-container {
+.settings-form {
 	position: fixed;
-	left: 40px;
+	left: -300px;
 	bottom: 80px;
 	z-index: 3;
+  transition: .3s;
+}
+
+.settings-open{
+  left: 30px;
 }
 
 .settings-content {
@@ -525,9 +538,9 @@ body {
   font-size: 18px;
 }
 
-.settings-block b {
+.settings-block p {
 	user-select: none;
-	font-weight: normal;
+	/* font-weight: normal; */
 	line-height: 20px;
 }
 
@@ -543,7 +556,7 @@ input[type="checkbox"] {
 label {
 	cursor: pointer;
 	text-indent: -9999px;
-	width: 30px;
+	width: 40px;
 	height: 20px;
 	background: grey;
 	display: block;
@@ -569,19 +582,21 @@ input:checked + label {
 }
 
 input + .toggle-lang {
-	border-radius: 7px;
+	border-radius: 0;
+  /* width: 30px; */
+  height: 27px;
 	background: url("../assets/svg/russia-flag-icon.svg");
 }
 
 input:checked + .toggle-lang {
 	background: url("../assets/svg/united-kingdom-flag-icon.svg");
-	background-position-y: 1.2px;
+	/* background-position-y: 1.2px; */
 }
 
-input + .toggle-lang {
+/* input + .toggle-lang {
 	box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.8);
 	background-blend-mode: multiply;
-}
+} */
 
 input:checked + label:after {
 	left: calc(100% - 5px);
@@ -599,11 +614,11 @@ input + .toggle-lang::after {
 	position: absolute;
 	left: 0 !important;
 	top: 0;
-	background-color: #000;
-	border-radius: 20px;
-	z-index: 0;
-	opacity: 0.2;
-	transform: none !important;
+	/* background-color: #FFF; */
+	/* border-radius: 20px; */
+	/* z-index: 0; */
+	opacity: 0.1;
+  transform: none !important;
 }
 
 .setting-bg-container select {
@@ -620,6 +635,23 @@ input + .toggle-lang::after {
 }
 .with-tag input {
 	display: block;
+}
+
+.disable-block {
+  display: none;
+}
+
+.hidden-block {
+	opacity: 0;
+	visibility: hidden;
+	overflow: hidden;
+  /* height: 0; */
+  min-height: 0;
+  padding: 0;
+	margin: 0;
+  font-size: 0;
+	transform: scale(0, 0);
+  transition: .3s;
 }
 
 @media (max-width: 768px) {
