--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -87,13 +87,29 @@ body {
 
 .play-list {
   text-align: left;
+  height: 112px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
 
+.play-list::-webkit-scrollbar {
+  width: 6px;
+}
+
+.play-list::-webkit-scrollbar-track {
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 3px;
+}
+
+.play-list::-webkit-scrollbar-thumb {
+  background-color: white;
+  border-radius: 20px;
 }
 
 .play-item {
   position: relative;
-  padding: 5px;
-  padding-left: 20px;
+  padding: 5px 15px 5px 20px;
+  /* padding-left: 20px; */
   list-style: none;
   opacity: .8;
   transition: .3s;
