--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -529,6 +529,17 @@ body {
   left: 30px;
 }
 
+.settings-menu-shadow {
+  position: fixed;
+  z-index: 3;
+  width: 100%;
+  height: 100%;
+  /* transition: all 0.3s; */
+  background-color: rgba(0, 0, 0, .3);
+  left: 0;
+  bottom: 0;
+}
+
 .settings-content {
 	padding: 20px;
 	/* position: absolute; */
