--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -8,7 +8,6 @@
   margin: 0;
   padding: 0;
 }
-/* ---------------------------------- */
 
 button,
 html input[type="button"],
@@ -26,17 +25,15 @@ html input[disabled] {
 }
 
 body {
-  /* display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
-  width: 100%; */
-  min-width: 480px;
+  min-width: 390px;
   min-height: 100vh;
+  max-width: 1920px;
+  margin: 0 auto;
   font-family: 'Arial', sans-serif;
   font-size: 16px;
   color: #fff;
   text-align: center;
+  background: center/cover;
   background-blend-mode: multiply;
   transition: background-image 1s ease-in-out;
   background-size: cover;
@@ -112,7 +109,7 @@ body {
 
 .play-item {
   position: relative;
-  padding: 5px 15px 5px 20px;
+  padding: 5px 15px 5px 0px;
   list-style: none;
   opacity: .8;
   display: flex;
@@ -125,13 +122,13 @@ body {
   opacity: 1;
 }
 
-.play-item::before {
+/* .play-item::before {
   content: "\2713";  
   position: absolute;
   left: 0;
   top: 2px;
   font-weight: 900;
-}
+} */
 
 .item-active {
   color: #C5B358;
@@ -457,8 +454,10 @@ body {
 }
 
 .quote-wrapper {
+  display: block;
   transition: .3s;
 }
+
 .change-quote {
   margin-bottom: 30px;
   background-image: url("../assets/svg/reload.svg");  
@@ -594,7 +593,6 @@ body {
   border: 0;
   padding: 0 10px;
   line-height: 20px;
-  /* width: 150px; */
 }
 
 /* label */
@@ -700,22 +698,186 @@ input + .toggle-lang::after {
 }
 
 @media (max-width: 768px) {
+  .player,
+  .weather {
+		width: 140px;
+		font-size: 12px;
+    max-height: 260px;
+	}
+
+  .play-item {
+    width: 140px;
+  }
+
+  .vol-controls {
+    width: 140px;
+  }
+	.city {
+		font-size: 18px;
+		padding: 0;
+	}
+
+	.time {
+		min-height: 80px;
+		font-size: 70px;
+	}
+
+	.greeting-container {
+		width: 100%;
+		flex-direction: column;
+		min-height: 40px;
+		font-size: 22px;
+	}
+
+	.greeting {
+		padding: 5px;
+	}
+
+	.quote {
+		margin-bottom: 20px;
+	}
+
+	.name {
+		max-width: 100%;
+		text-align: center;
+		font-size: 22px;
+		padding: 5px;
+		box-sizing: border-box;
+		align-self: stretch;
+	}
+
+	.footer {
+		position: fixed;
+		bottom: 25px;
+	}
+
+	.settings-button {
+		margin-left: 10px;
+		margin-bottom: 10px;
+		width: 20px;
+		height: 20px;
+	}
+
+  .player-icon:hover,
+	.slider-icon:hover,
+	.change-quote:hover {
+		transform: none;
+	}
+
+	.social-container {
+		right: 10px;
+		bottom: 10px;
+		gap: 10px;
+	}
+
+	.social-container img {
+		width: 20px;
+		height: 20px;
+	}
+
+  .rs-logo {
+		height: 16px !important;
+		width: 50px !important;
+	}
+
+  .wind,
+	.humidity,
+	.temperature {
+		margin-top: 7.2px;
+	}
+
+	.wind span:first-child,
+	.humidity span:first-child,
+	.temperature span:first-child {
+		font-size: 12px;
+	}
+}
+
+@media (max-width: 390px) {
+  .quote-wrapper {
+    position: absolute;
+    padding-bottom: 40px;
+    padding-right: 30px;
+    z-index: -1;
+    font-size: 12px;
+  }
+}
+
+  @media (max-width: 320px) {
+
+  body {
+    min-width: 320px;
+  }
+
+  .header,
+  .main,
+  .footer {
+    padding: 10px;
+    display: ;
+  }
+
+  .time,
+  .date {
+    margin-bottom: 5px;
+  }
+
   .time {
-    min-height: 80px;
-    font-size: 72px;    
-  }
-
-  .greeting-container {
     min-height: 40px;
-    font-size: 32px;
+    font-size: 48px;
+  }
+  .quote,
+  .change-quote {
+    margin-bottom: 5px;
   }
 
-  .greeting {
-    padding: 5px;
+  .quote-wrapper {
+    width: 330px;
+    top: -10px;
+    padding-bottom: 0;
   }
 
-  .name {
-    font-size: 32px;
-    padding: 5px;
+  .player, .weather {
+    width: 120px;
+    font-size: 12px;
+    max-height: 200px;
+  }
+
+  .date,
+  .greeting-container {
+    font-size: 20px;
+    min-height: 20px;
+  }
+
+  .play-item {
+    padding-top: 0;
+    width: 110px;
+    overflow: hidden;
+    padding-right: 0;
+  }
+
+  .vol-controls {
+    padding-bottom: 0;
+  }
+
+  .play-list {
+    height: 70px;
+  }
+
+  .weather-icon {
+    font-size: 60px;
+}
+
+  .vol-controls {
+    width: 120px;
+  }
+
+  .settings-wrapper,
+  .social-wrapper {
+    position: absolute;
+    top: 45px;
+  }
+
+  .social-wrapper {
+    right: 55px;
   }
 }
