--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -32,7 +32,7 @@ body {
   font-size: 16px;
   color: #fff;
   text-align: center;
-  background: center/cover;
+  background: center/cover, rgba(0, 0, 0, 0.5);
   background-blend-mode: multiply;
   transition: background-image 1s ease-in-out;
   background-size: cover;
