--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -733,6 +733,11 @@ input + .toggle-lang::after {
 		padding: 5px;
 	}
 
+  .quote-wrapper {
+    position: absolute;
+    padding-bottom: 40px;
+    width: calc(100% - 40px);
+  }
 	.quote {
 		margin-bottom: 20px;
 	}
@@ -780,11 +785,7 @@ input + .toggle-lang::after {
 @media (max-width: 390px) {
 
   .quote-wrapper {
-    position: absolute;
-    padding-bottom: 40px;
-    padding-right: 30px;
-    /* z-index: -1; */
-    font-size: 12px;
+    font-size: 14px;
   }
 
   .settings-wrapper,
@@ -809,6 +810,10 @@ input + .toggle-lang::after {
     height: 32vh;
   }
 
+  .footer {
+    height: 29vh;
+  }
+
   .time,
   .date {
     margin-bottom: 5px;
@@ -818,10 +823,10 @@ input + .toggle-lang::after {
     min-height: 40px;
     font-size: 48px;
   }
-  .quote-wrapper {
-    padding-right: 10px;
-  }
 
+  .quote-wrapper {
+    width: calc(100% - 20px);
+  }
   .social-wrapper {
     gap: 10px;
   }
