--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -503,13 +503,30 @@ body {
   z-index: 10;
 }
 
-.social-item {
-  z-index: 10;
-}
-
 .settings-button:hover {
 	transform: rotate(90deg);
   opacity: 1;
+}
+
+.social-item {
+  z-index: 9;
+}
+
+.rs-logo {
+  background-image: url("../assets/svg/rs_school.svg");
+  background-size: 80px 30px;
+  width: 80px;
+  height: 30px;
+  z-index: 10;
+}
+
+.github-logo {
+  background-image: url("../assets/svg/github.svg");
+  background-size: 40px 40px;
+  background-repeat: no-repeat;
+  width: 40px;
+  height: 40px;
+  z-index: 10;
 }
 
 /* Settings */
